...
    @NSManaged public var items: NSSet?
}

// MARK: - Computed Properties
extension SubCategory {
    var itemsArray: [Item] {
        return (items?.allObjects as? [Item]) ?? []
    }
    
    var fullName: String {
        return "\(category.name) > \(name)"
    }
    
...
